# dead

./: .gitignore  README.md
assignments/bitvavo/: README.md
assignments/bitvavo/src/: Exchange.kt  Main.kt  Order.kt
assignments/luxinos/c/src/: cli.h  server.c  socket.h
assignments/luxinos/rust/src/: console.rs  message.rs  server.rs  signal.rs
cv/: bun.lockb  index.js  package.json  template-zig.html  template.html
luxinos/: task.md
luxinos/c/: .clang-format  CMakeLists.txt
luxinos/c/src/: client.c  console.h  game.h  protocol.h
luxinos/rust/: Cargo.toml
luxinos/rust/src/: cli.rs  client.rs  lib.rs  socket.rs
